--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest --watchAll --no-cache --detectOpenHandles"
   },
   "author": "Gianmarco Chistama @mavadev",
   "license": "ISC",
