--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "jest --watchAll --no-cache --detectOpenHandles"
+    "test": "jest --watchAll --no-cache --detectOpenHandles",
+    "pretest": "npm run clear-db",
+    
+    "clear-db": "ts-node src/data --clear"
   },
   "author": "Gianmarco Chistama @mavadev",
   "license": "ISC",
