--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "jest --watchAll --no-cache --detectOpenHandles",
+    "test:coverage": "npm run pretest && jest --watchAll --no-cache --detectOpenHandles --coverage",
     "pretest": "npm run clear-db",
     
     "clear-db": "ts-node src/data --clear"
