--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "jest --watchAll --no-cache --detectOpenHandles",
     "test:coverage": "npm run pretest && jest --watchAll --no-cache --detectOpenHandles --coverage",
     "pretest": "npm run clear-db",
-    
     "clear-db": "ts-node src/data --clear"
   },
   "author": "Gianmarco Chistama @mavadev",
@@ -17,6 +16,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
@@ -32,6 +33,8 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
