--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "REST API´s con Express y TypeScript",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "jest --watchAll --no-cache --detectOpenHandles",
     "test:coverage": "npm run pretest && jest --watchAll --no-cache --detectOpenHandles --coverage",
