--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "declaration": true,
-    // Creacion de modelos
+    // Creación de modelos
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     // Soporte para ingreso de datos a DB
@@ -16,5 +16,6 @@
     "moduleResolution": "nodenext",
     "module": "NodeNext"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.spec.ts"]
 }
