--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "rest_api_server",
-  "version": "1.0.0",
-  "description": "REST API´s con Express y TypeScript",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "jest --watchAll --no-cache --detectOpenHandles",
-    "test:coverage": "npm run pretest && jest --watchAll --no-cache --detectOpenHandles --coverage",
-    "pretest": "npm run clear-db",
-    "clear-db": "ts-node src/data --clear"
-  },
-  "author": "Gianmarco Chistama @mavadev",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/morgan": "^1.9.9",
-    "@types/supertest": "^6.0.2",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.7",
-    "@types/yamljs": "^0.2.34",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.1",
-    "express-validator": "^7.2.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.13.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5",
-    "sequelize-typescript": "^2.1.6",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "yamljs": "^0.3.0"
-  }
+	"name": "rest_api_server",
+	"version": "1.0.0",
+	"description": "REST API´s con Express y TypeScript",
+	"main": "index.js",
+	"scripts": {
+		"postbuild": "ncp ./src/config/swagger/swagger.css ./dist/config/swagger/swagger.css && ncp ./src/config/swagger/swagger.yaml ./dist/config/swagger/swagger.yaml",
+		"build": "tsc",
+		"dev": "nodemon --exec ts-node src/index.ts",
+		"test": "jest --watchAll --no-cache --detectOpenHandles",
+		"test:coverage": "npm run pretest && jest --watchAll --no-cache --detectOpenHandles --coverage",
+		"pretest": "npm run clear-db",
+		"clear-db": "ts-node src/data --clear"
+	},
+	"author": "Gianmarco Chistama @mavadev",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^5.0.0",
+		"@types/jest": "^29.5.14",
+		"@types/morgan": "^1.9.9",
+		"@types/supertest": "^6.0.2",
+		"@types/swagger-jsdoc": "^6.0.4",
+		"@types/swagger-ui-express": "^4.1.7",
+		"@types/yamljs": "^0.2.34",
+		"jest": "^29.7.0",
+		"ncp": "^2.0.0",
+		"nodemon": "^3.1.7",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"colors": "^1.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.1",
+		"express-validator": "^7.2.0",
+		"morgan": "^1.10.0",
+		"pg": "^8.13.1",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.37.5",
+		"sequelize-typescript": "^2.1.6",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1",
+		"yamljs": "^0.3.0"
+	}
 }
